--- a/training-system/src/app/components/tasks/task-view/task-view.component.less
+++ b/training-system/src/app/components/tasks/task-view/task-view.component.less
@@ -33,8 +33,15 @@ a:hover {
 }
 
 .change {
-  color: #0299ea;
+  margin-top:10px;
+  color: #0299ea !important;
   font-weight: bolder;
+}
+
+.publish{
+  margin-top:10px;
+  color: green !important;
+  font-weight: bolder !important;
 }
 
 .add {
@@ -57,5 +64,14 @@ h2 {
 }
 .task_st {
   color: #00B74A;
+}
+.card-body {
+  width: 180px;
+}
+.published {
+  color: green;
+}
+.not-published {
+  color: #e00303;
 }
 
