--- a/training-system/src/app/components/tasks/task-creation/task-creation.component.less
+++ b/training-system/src/app/components/tasks/task-creation/task-creation.component.less
@@ -119,3 +119,10 @@
 .field-button {
   width: 50px;
 }
+.mat-button:focus {
+  outline: none;
+}
+.mat-raised-button:focus {
+  outline: none;
+}
+
