--- a/training-system/src/app/components/dialog/all-stats-dialog/all-stats.dialog.component.less
+++ b/training-system/src/app/components/dialog/all-stats-dialog/all-stats.dialog.component.less
@@ -6,12 +6,6 @@
 .title {
   font-size: 20px;
 }
-.back {
-  //height: 20px;
-  display:block;
-  position: relative;
-  border: 1px solid white;
-  margin:0 auto;
+.mat-button:focus {
   outline: none;
-  font-size: 16px;
 }
