--- a/training-system/src/app/components/shared/header/header.component.html
+++ b/training-system/src/app/components/shared/header/header.component.html
@@ -60,7 +60,7 @@
   </span>
   <span class="example-spacer">
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
-            (click)="navigate('info')"
+            (click)="openInfoDialog()"
     >
     <span class="mat-h1 enter">Справка</span>
   </button>
