--- a/training-system/src/app/components/dialog/field-settings-dialog/field-settings-dialog.component.html
+++ b/training-system/src/app/components/dialog/field-settings-dialog/field-settings-dialog.component.html
@@ -1,8 +1,8 @@
 <p>НАСТРОЙКИ ПОЛЯ</p>
 <form class="example-form" [formGroup]="_settingsForm">
-  <mat-form-field class="example-full-width" appearance="fill">
+  <mat-form-field [style.width.px]=150 class="example-full-width" appearance="fill">
     <mat-label>Длина стороны</mat-label>
-    <input matInput placeholder="Длина стороны" formControlName="filedSideLength" (input)="onSideLengthChange($event,true)">
+    <input readonly matInput placeholder="Длина стороны" formControlName="filedSideLength" (input)="onSideLengthChange($event,true)">
   </mat-form-field>
   <mat-slider
     (valueChange)="onSideLengthChange($event)"
@@ -13,6 +13,6 @@
     max="12"
     aria-label="units">
   </mat-slider>
-  <button mat-button (click)="submit()">Применить</button>
-  <button mat-button (click)="cancel()">Отмена</button>
+  <button  mat-button style="width: 120px" (click)="submit()">Применить</button>
+  <button  mat-button style="margin-left: 5px; width: 120px" (click)="cancel()">Отмена</button>
 </form>
