--- a/training-system/src/app/components/tasks/task-solution/task-solution.component.less
+++ b/training-system/src/app/components/tasks/task-solution/task-solution.component.less
@@ -15,7 +15,7 @@
 }
 
 .command-list__item {
-  background-color: darkorange;
+  //background-color: darkorange;
   margin-top: 15px;
   margin-bottom: 15px;
 }
@@ -79,6 +79,7 @@
   width: 600px;
   height: 700px;
   margin: 0 0 25px 0;
+  margin-left: 100px;
   display: inline-block;
   vertical-align: top;
 
@@ -178,4 +179,14 @@
   opacity: 0.2;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
   filter: alpha(opacity=20);
+}
+.command-list_target {
+  overflow-y: scroll;
+}
+.mat-button {
+  background: #e2e2e2;
+}
+h2 {
+  font-weight: bolder;
+  font-size: 24px;
 }
