added play monkey

--- a/training-system/src/app/components/tasks/task-solution/task-solution.component.html
+++ b/training-system/src/app/components/tasks/task-solution/task-solution.component.html
@@ -18,11 +18,12 @@
 </div>
 
 <div class="task-part">
+  <br>
   <h2>Ваш алгоритм</h2>
   <div class="command-list_target"
        dragula="COPYABLE"
        id="right"
-       style="width: 250px;height: 500px; background-color: #cccccc;">
+       style="width: 250px;height: 500px; background-color: #cccccc; margin-top: 15px">
 
   </div>
 
@@ -43,6 +44,7 @@
   </button>
 </div>
 <div class="field-container">
+  <br>
   <h2>{{task.title}}</h2>
   <p>{{task.description}}</p>
   <div class="field-wrap">
