inited task check

--- a/training-system/src/app/components/tasks/task-check/task-check.component.html
+++ b/training-system/src/app/components/tasks/task-check/task-check.component.html
@@ -1,1 +1,72 @@
-<p>task-check works!</p>
+<div class="task-part center-element">
+  <mat-form-field appearance="fill">
+    <mat-label>Ученик</mat-label>
+    <mat-select>
+      <mat-option *ngFor="let student of students" [value]="student.id" (click)="parseScriptToCommands()">
+        {{student.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <div class="command-list_source" #commandsList>
+    <!--<div class="command-list__item" *ngFor="let item of todo"
+    >
+      <div *ngIf="item === 'ВПЕРЕД' || item === 'НАЗАД'" style="background-color: dodgerblue">{{item}}</div>
+      <div *ngIf="item === 'ПОВОРОТ НАЛЕВО' || item === 'ПОВОРОТ НАПРАВО'"
+           style="background-color: limegreen">{{item}}</div>
+      <div *ngIf="item === 'ПРЫЖОК'" style="background-color: blueviolet">{{item}}</div>
+      <div *ngIf="item === 'ЦИКЛ'" style="background-color: darkorange" class="for-start">{{item}}
+        <input type="number" min="1" max="16" placeholder="i">
+      </div>
+    </div>-->
+  </div>
+</div>
+<div class="field-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>ИГРОВОЕ ПОЛЕ</h2>
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="field-buttons">
+        <div class="container">
+          <div class="row align-content-end">
+            <!--<div class="field-button">
+              <button mat-icon-button
+                      mat-raised-button
+                      matTooltip="Проверить задание"
+                      [matTooltipPosition]="'below'"
+                      (click)="parseScriptToCommands()">
+                <mat-icon>check_circle_outline</mat-icon>
+              </button>
+            </div>-->
+            <!--<div class="field-button">
+              <button mat-icon-button
+                      mat-raised-button
+                      matTooltip="Очистить поле"
+                      [matTooltipPosition]="'below'"
+                      (click)="clearField()">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>-->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="field-wrap">
+      <div class="field-row" *ngFor="let column of field.columns; index as i">
+        <div class="field-col" *ngFor="let cell of column.cells; index as j"
+             [ngClass]="{size__4: getSize(4), size__5: getSize(5), size__6: getSize(6), size__7: getSize(7),
+              size__8: getSize(8), size__9: getSize(9), size__10: getSize(10), size__11: getSize(11),
+              size__12: getSize(12)}">
+          <app-field-cell
+            class="field-cell"
+            [type]="cell.type"
+            [idColumn]="i"
+            [idCell]="j">
+          </app-field-cell>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
