--- a/training-system/src/app/components/tasks/tasks.component.html
+++ b/training-system/src/app/components/tasks/tasks.component.html
@@ -6,3 +6,6 @@
 <app-task-solution *ngIf="actionType === 'solution'"
                    [currentTaskId]="taskId"
 ></app-task-solution>
+<app-task-check *ngIf="actionType === 'check'"
+                   [currentTaskId]="taskId"
+></app-task-check>
