--- a/training-system/src/app/components/tasks/task-solution/task-solution.component.less
+++ b/training-system/src/app/components/tasks/task-solution/task-solution.component.less
@@ -79,7 +79,7 @@
   width: 600px;
   height: 700px;
   margin: 0 0 25px 0;
-  margin-left: 100px;
+  margin-left: 50px;
   display: inline-block;
   vertical-align: top;
 
@@ -189,4 +189,10 @@
 h2 {
   font-weight: bolder;
   font-size: 24px;
+}
+.white-icon {
+  color: white;
+}
+.mat-button:focus {
+  outline: none;
 }
